Replace ObjectAndAssociations<O> with SimplePair<O, Associations>, which is a generic type-safe pair class.